# pipeline_runner

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
configs/: pipeline.json
include/: BlockingQueue.h  Data.h  Logger.h  Metrics.h  OutputSink.h  PipelineEngine.h  ProcessingStage.h
src/: FFT.cpp  FileSink.cpp  Filter.cpp  Makefile  PipelineEngine.cpp  SineWaveGenerator.cpp  main.cpp
tests/: test_fft.cpp
